proc-macros/tests/ui/incorrect/sub/sub_unsupported_field.stderr
error: `#[subscription]` got unknown `magic` argument. Supported arguments are `alias`, `item`, `name`, `unsubscribe_alias`
 --> $DIR/sub_unsupported_field.rs:6:2
  |
6 |     #[subscription(name = "sub", item = u8, magic = true)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
